[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["joshkotrous <43544333+joshkotrous@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.2"
flask-httpauth = "^4.8.0"
pyjwt = {extras = ["crypto"], version = "^2.8.0"}
cryptography = "^42.0.5"
flask-sqlalchemy = "^3.1.1"
sqlalchemy = "^2.0.29"
sqlalchemy-orm = "^1.2.10"
psycopg2 = "^2.9.9"
marshmallow = "^3.21.1"
marshmallow-sqlalchemy = "^1.0.0"
pytest = "^8.1.1"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.0"

[too.black]
line_length = 120

[tool.isort]
profile = "black"

[tool.mypy]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
